--- a/public/css/style.css
+++ b/public/css/style.css
@@ -3,23 +3,83 @@
   margin: 0;
   padding: 0;
 }
+body {
+  font-family:Arial, Helvetica, sans-serif;
+}
 
+/************************
+          Header
+*************************/
 header {
+  color: white;
   display: flex;
   flex-direction: row;
   justify-content: space-between;
-  background-color: antiquewhite;
-  padding: 15px 40px;
+  background-color: transparent;
+  padding: 15px 8rem;
   align-items: center;
+  margin-bottom: -12vh;
+  font-weight: 100;
 }
 header > nav a {
   margin-left: 20px;
-  color: black;
+  color: white;
   text-decoration: none;
 }
 header > nav a:hover {
   color: rgb(35, 35, 35);
   text-decoration:underline;
+}
+
+/************************
+      Main Section
+*************************/
+.main-section {
+  background-image: url('/img/wave background.png');
+  background-repeat: no-repeat;
+  color: white;
+  height: 100vh;
+  width: 100vw;
+  background-size: 100% 100%;
+
+  padding-top: 15rem;
+  padding-left: 8rem;
+}
+.main-section h1 {
+  font-weight: 100;
+  font-size: 2rem;
+  letter-spacing: 4px;
+  line-height: 3rem;
+}
+.main-section p {
+  margin: 10px 0;
+  font-size: 0.8rem;
+  color: rgb(207, 207, 207);
+  line-height: 1.4rem;
+}
+.main-section form label {
+  margin-left: 15px;
+}
+.main-section input {
+  font-size: 1rem;
+  background-color: rgba(228, 228, 228, 0.212);
+  border: 0px;
+  padding: 15px 50px;
+  margin-left: -40px ;
+  outline: none;
+  color: white;
+  width: 35%;
+}
+.main-section input::placeholder {
+  color: #9084d8;
+}
+.main-section button {
+  margin-left: -10px;
+  background-image: linear-gradient(to top right, #1ea6be, #8ad9f1);
+  height: 48px;
+  color: white;
+  padding: 0 30px ;
+  border: none;
 }
 footer {
   position: absolute;
