--- a/templates/views/index.hbs
+++ b/templates/views/index.hbs
@@ -6,7 +6,18 @@
 </head>
 <body>
   {{>header}}
-  
-  {{>footer}}
+
+  <section class="main-section">
+    <h1>Different kind of weather inside<br> of 24/7 hours.</h1>
+    <p>Yet too often some very human cultural artifacts really lead the buisness down<br> the certain routes.</p>
+
+    <form action="">
+      <label for="">🔍</label>
+      <input type="text" placeholder="Search City, Place...">
+      <button>Get Update</button>
+    </form>
+  </section>
+
+  {{!-- {{>footer}} --}}
 </body>
 </html>
