Fetch data from API on front-end

--- a/templates/views/index.hbs
+++ b/templates/views/index.hbs
@@ -13,8 +13,8 @@
 
     <form action="">
       <label for="">🔍</label>
-      <input type="text" placeholder="Search City, Place...">
-      <button>Get Update</button>
+      <input id="search-inp" type="text" placeholder="Search City, Place...">
+      <button id="search-btn">Get Update</button>
     </form>
   </section>
 
