--- a/templates/partials/header.hbs
+++ b/templates/partials/header.hbs
@@ -1,5 +1,5 @@
 <header>
-  <h1 class="brand-name">Astro</h1>
+  <h1 id="brand-name">Astro</h1>
   <nav>
     <a href="/">Home</a>
     <a href="/about">About</a>
