--- a/templates/views/index.hbs
+++ b/templates/views/index.hbs
@@ -9,12 +9,12 @@
 
   <div class="container">
     <section class="main-section">
-      <h1>Different kind of <span class="text-orange">wea</span><span class="text-lightyellow">ther</span> inside<br> of 24/7 hours.</h1>
+      <h1>Different kind of <span class="text-lightyellow">weather</span> inside<br> of 24/7 hours.</h1>
       <p>Yet too often some very human cultural artifacts really lead the buisness down<br> the certain routes.</p>
 
       <form action="">
         <label for="">🔍</label>
-        <input id="search-inp" type="text" placeholder="Search City, Place...">
+        <input id="search-inp" type="text" placeholder="Search City, Place..." spellcheck="false" autocomplete="off">
         <button id="search-btn">Get Update</button>
       </form>
     </section>
