--- a/public/css/style.css
+++ b/public/css/style.css
@@ -42,6 +42,7 @@ header > nav a:hover {
   display: flex;
   align-items: center;
   justify-content: space-evenly;
+  margin-top: 5rem;
 }
 /************************
       Main Section
@@ -102,8 +103,8 @@ header > nav a:hover {
 }
 .display-section .card-shadow {
   background-color: #e76f51;
-  width: 30vw;
-  height: 60vh;
+  width: 26rem;
+  height: 25rem;
   box-shadow: 1px 1px 10px black;
   border-radius: 10px;
 }
@@ -121,8 +122,8 @@ header > nav a:hover {
   font-weight: bold;
   background-color: #e9c46a;
   color: #264653;
-  width: 30vw;
-  height: 60vh;
+  width: 26rem;
+  height: 26rem;
   margin-top: -24rem;
   margin-left: 1rem;
   box-shadow: 1px 1px 10px black;
