--- a/public/css/style.css
+++ b/public/css/style.css
@@ -35,6 +35,9 @@ header > nav a:hover {
   color: rgb(212, 212, 212);
   text-decoration:underline;
 }
+/***************************************************
+                      Home Page
+****************************************************/
 /************************
       Container
 *************************/
@@ -169,6 +172,24 @@ header > nav a:hover {
 .display-section .card #visibility {
   margin-right: 4rem;
 }
+/***************************************************
+                End Home Page
+****************************************************/
+/***************************************************
+                      Comming Soon Page
+****************************************************/
+section#comming-soon {
+  text-align: center;
+  color: #e9c46a;
+  font-size: 2rem;
+}
+section#comming-soon h1{
+  margin-top: 36vh;
+  margin-bottom: 4rem;
+}
+/***************************************************
+                      Comming Soon Page
+****************************************************/
 footer {
   position: absolute;
   bottom: 0;
@@ -196,4 +217,17 @@ footer {
 }
 .hide {
   display: none;
+}
+.btn{
+  background-color: #e76f51;
+  font-size: 1rem;
+  height: 48px;
+  color: white;
+  padding: 0 30px ;
+  border: none;
+}
+.btn:hover {
+  background-color: #e9c46a;
+  color: black;
+  transition: 300ms ease-in;
 }
