--- a/css/style.css
+++ b/css/style.css
@@ -16,6 +16,7 @@ header {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
+  align-items: center;
   background-color: transparent;
   padding: 15px 8rem;
   align-items: center;
@@ -26,6 +27,12 @@ header #brand-name {
   text-shadow:5px 1px 0px #e9c46a;
   font-size: 3rem;
 }
+.navLinks{
+  display: inline-block;
+  margin-top: 32px;
+}
+
+
 header > nav a {
   margin-left: 20px;
   color: white;
@@ -34,49 +41,6 @@ header > nav a {
 header > nav a:hover {
   color: rgb(212, 212, 212);
   text-decoration:underline;
-}
-
-.toggle{
-  position:relative;
-  width: 40px;
-  height: 35px;
-  display: inline-block;
-  float: right;
-  margin-right: -80px;
-  transition:ease-out .5s;
-}
-.bar1,.bar2,.bar3{
-  height: 2px;
-  width: 100%;
-  border-style: solid;
-  background-color: white;
-  border-radius: 10px;
-  display: block;
-  margin-top: 3px;
-}
-
-.bar1,.bar2,.bar3{
-  visibility: hidden;
-}
-
-.toggle:hover{
-  transform: translateY(-5px);
-}
-
-
-.bar1,.bar2,.bar3:hover{
-  background-color:#e76f51;
-}
-
-@media (max-width:600px)
-{
-  .bar1,.bar2,.bar3{
-    visibility: visible;  
-  }
-  header > nav a {
-    visibility: hidden;
-  }
-
 }
 
 /***************************************************
@@ -275,3 +239,45 @@ footer {
   color: black;
   transition: 300ms ease-in;
 }
+
+@media (max-width:720px)
+{
+
+  header{
+    padding: 0 25px ;
+  }
+  .main-section{
+    position: relative;
+    margin: -20% 20px 0 25px;
+  }
+
+  .main-section  p, .main-section h1{
+    visibility: hidden;
+  }
+
+  .container{
+    flex-direction: column;
+    margin-top: -200px;
+  }
+  .display-section{
+    margin-top: -80px;
+  }
+  .display-section .card-shadow{
+    width: 30rem;
+    height: 20em; 
+  }
+
+  .display-section .card{
+    width: 30rem;
+    height: 21rem;
+    margin-top: -19rem;
+  }
+
+  
+
+
+}
+
+
+
+
